--- a/style2.css
+++ b/style2.css
@@ -160,6 +160,15 @@ main {
     border: 1px solid #f0f0f0;
 }
 
+.card-header button {
+    background: var(--main-color);
+    border-radius: 20px;
+    color: #fff;
+    font-size: 0.8rem;
+    padding: 0.5rem 1rem;
+    border: 3px solid var(--main-color)
+}
+
 table {
     border-collapse: collapse;
 }
